--- a/TwoNumberSum_Tests/TwoNumberSum_Tests.csproj
+++ b/TwoNumberSum_Tests/TwoNumberSum_Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TwoNumberSum\TwoNumberSum_.csproj" />
+    <ProjectReference Include="..\TwoNumberSum\TwoNumberSum.csproj" />
   </ItemGroup>
 
 </Project>
