--- a/BinarySearch/BinarySearch.csproj
+++ b/BinarySearch/BinarySearch.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7F0BE5CD-C8AA-460B-8F44-6A78761ED354}</ProjectGuid>
+    <ProjectGuid>{2CABEC43-68E1-491A-A1EF-569615F7A921}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ProductSum</RootNamespace>
-    <AssemblyName>ProductSum</AssemblyName>
+    <RootNamespace>BinarySearch</RootNamespace>
+    <AssemblyName>BinarySearch</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
